GKE-GCR/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image:  eu.gcr.io/robotic-jet-301718/webapp:latest
        ports:
        - containerPort: 5000
